fixed broken stylesheet

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,7 @@ svg {
 }
 .outer-container {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     justify-content: center;
     font-size: 12pt;
